--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "url": "https://github.com/abhishekrithik/demofsd/issues"
   },
   "homepage": "https://github.com/abhishekrithik/demofsd#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
+  }
 }
